[package]
name = "steganos"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
flate2 = { version = "1.0", default-features = false, features = ["zlib"] }
hex = "0.4"
png = "0.17"
rayon = "1.10"
thiserror = "1.0"
zstd = { version = "0.13", features = ["zstdmt"] }
